public/styles/main.css
/* gL mane */ 

* {
    margin: 0;
    padding: 0;
    font-family: 'Inter', sans-serif;
    scroll-behavior: smooth;
}

:root {
    --main-bg-color : #121212;
    --accent-color-purple: #8F62EC;
    --accent-color-green: #01DECA;

}

body {
    background-color: var(--main-bg-color);
}

main {
    margin-top: 5em;
}

/* #region Highlighted-item styling */


    /* Container for item picture */
    .h-product-img img {
        max-width: 100%;
        object-fit: cover;
    }

    /* Container for item information */
    .h-product-info {
        margin: 7.5%;
        color: white;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    /* Container for title and price */
    .h-title-and-price {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        margin-bottom: 15px;
    }

    .h-title-and-price h2 {
        font-size: 2.2em;
    }

    .h-title-and-price span {
        font-size: 1.7em;
        font-weight: lighter;
        align-self: flex-end; /* Aligns the span to the bottom */
    }

    /* Description styling */
    .h-description > p {
        font-weight: lighter;
        font-size: 1.2em;
        color: rgb(204, 205, 206);
        margin: 1em 0;
    }

    .size-and-add {
        display: flex;
        align-items: center;

    }
    /* Table styling */
    table {
        width: 75%;
        border-collapse: collapse;
        margin: 1em 0;
    }

    table th,
    table td {
        color: white;
        border: 1px solid #fff;
        padding: 1em;
        text-align: center;
        width: 25%;
    }

    table th {
        font-weight: bold;
    }

    table th:hover {
        background-color: white;
        color: var(--main-bg-color);
        transition: .15s ease-in;
    }

    /* Button styling */
    #cartBtn {
        margin-left: 2.6em;
        background-color: #fff;
        padding: 1.05em;
    }

    #cartBtn:hover {
        background-color: #01DECA;
        transition: .15s ease-in;
    }

   .more-products-cta {
        display: none;
   }

/* #endregion */

/* #region rest of the products styling */

.products {
    background-color: rgb(246, 246, 246);
}
    .products-container{
        padding: 2.5em 2.5em;

        .product {
            border: 1px dashed; /* check size of boxes */
        }

        .product-img {
            width: 100%;
        }

        .product-img img{
            max-width: 100%;
            object-fit: cover;
        }

        .product-info {
            padding: 1em 0 2em 0;
        }

        .title-and-price{
            display: flex;
            flex-direction: row;
            align-items: center;
            justify-content: space-between;
            margin-bottom: 15px;
        }

        .title-and-price h2{
            font-size: 1.8em;
        }

        .title-and-price span {
            font-size: 1.5em;
            font-weight: lighter;
            align-self: flex-end;
        }

        .product-description > p {
            font-weight: lighter;
            font-size: 1.3em;
            color: #8C8C8C;
            margin: 1em 0;
        }

        /* Table styling */

        .size-and-add {

            display: flex;
            align-items: center;

            table {
                width: 75%;
                border-collapse: collapse;
                margin: .5em 0;
            }
    
            table th,
            table td {
                color: black;
                border: 1px solid black;
                padding: 1em;
                text-align: center;
                width: 25%;
            }
    
            table th {
                font-weight: bold;
            }
    
            table th:hover {
                background-color: black;
                color: white;
                transition: .15s ease-in;
            }

            /* Button styling */
            #cartBtn {
                margin-left: 2.5em;
                border: 1px solid rgb(103, 103, 103);
                padding: 12.5px;

            }
            #cartBtn:hover {
                background-color: #01DECA;
                transition: .15s ease-in;
            }
        }

}


/* #endregion product */

/* #region Media queries */

@media (min-width: 62.5em){
    
    main {
        margin-top: 0;
    }

    /* #region highlight section styling */

    .highlighted-product {
        display: flex;
        flex-direction: row;
    }

    .h-product-img{
        order: 2;
        width: 55%;

    }

    .h-product-info{
        justify-content: flex-start;
        order: 1;
        width: 50%;
    }

    .h-title-and-price h2{
        font-size: 3em;
    }

    .h-description > p {
        margin: 2em 0;
    }

    table {
        width: 60%;
    }
    
    table th,
    table td {
        padding: 1.5em;
    }

    #cartBtn {
        padding: 1.5em;
    }

    .more-products-cta{
        display: flex;
        align-items: center;
        margin-top: auto; /* Push the cta to the bottom */
    }

    .tp-to-product {
        display: flex;
        color: inherit;
        text-decoration: none;
        align-items: center;
    }

    .tp-to-product > p {
        margin-left: 1em;
    }

    .tp-to-product > p:hover {
        color: var(--accent-color-green);
        transition: .15s ease-in;
    }

    .moreProductsBtn {
        border: 1px solid var(--accent-color-green);
        padding: 1.5em;
        animation: jump 2s infinite;
    }

    .moreProductsBtn:hover {
        background-color: var(--accent-color-green);
        transition: .15s ease-in;
    }

    /* #endregion */

    /* #region rest of products styling */

    .products-container{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        padding: calc(2.5em + 2em);
    }

    .product {
        width: 30%;
        
    }

    
}

/* #endregion */


/* #region Keyframe animations */ 

@keyframes reveal {
    0% {
      transform: translate(0,200%);
    }
    100% {
      transform: translate(0,0);
    }
  }

  @keyframes jump {

    0%,
    20%,
    50%,
    80%,
    100% {
        transform: translateY(0);
    }

    40% {
        /* transform: rotate(-0.25turn); */
        border: 1px solid var(--accent-color-purple);
    }

    60% {
        transform: translateY(-5px);
        fill: 1px solid var(--accent-color-purple);
    }
    
}

  /* #endregion */

